--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,8 @@
-name: AlexFreedomMod
+name: PotatoFreedomMod
 main: me.StevenLawson.TotalFreedomMod.TotalFreedomMod
-version: 3.0
-description: Plugin for the AlexFreedom server.
+version: 3.1
+description: Plugin for the PotatoFreedom server.
 softdepend: [BukkitTelnet, WorldEdit, Essentials, DisguiseCraft, BarAPI, CoreProtect]
-authors: [Madgeek1450, DarthSalamon, Camzie99, RobinGall2910, tylerhyperHD]
+authors: [Madgeek1450, DarthSalamon, Camzie99, RobinGall2910, tylerhyperHD, reuben4545, AlexTheMurderer]
 
 # plugin.yml is no longer used to define commands.
